fix(user): Make bottom buttons align with navbar

--- a/project/static/css/style.css
+++ b/project/static/css/style.css
@@ -45,7 +45,3 @@ body {
     width: 50%;
     margin: auto;
 }
-
-.black {
-    background-color: black;
-}
